new model for get products
