# docs/swagger.json
@@ -91,7 +91,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.Product"
+                                "$ref": "#/definitions/domain.Products"
                             }
                         }
                     },
@@ -202,7 +202,7 @@
         "domain.Product": {
             "type": "object",
             "properties": {
-                "brand_name": {
+                "brandName": {
                     "description": "Бренд кроссовок",
                     "type": "string"
                 },
@@ -210,7 +210,7 @@
                     "description": "Описание модели кроссовка",
                     "type": "string"
                 },
-                "factory_name": {
+                "factoryName": {
                     "description": "Завод изготовитель",
                     "type": "string"
                 },
@@ -260,13 +260,33 @@
                     "description": "Размер",
                     "type": "integer"
                 },
-                "stock_count": {
+                "stockCount": {
                     "description": "Кол-во на складе",
                     "type": "integer"
                 },
                 "weight": {
                     "description": "Вес",
                     "type": "number"
+                }
+            }
+        },
+        "domain.Products": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "description": "Список продуктов",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Product"
+                    }
+                },
+                "limit": {
+                    "description": "Кол-во элементов",
+                    "type": "integer"
+                },
+                "nextCursor": {
+                    "description": "Курсор для запроса след страницы",
+                    "type": "string"
                 }
             }
         }
